tests/bad/01-enum-empty.rs
#[derive(Debug, PartialEq, Eq, better_default_derive::Default)]
enum Empty{}

fn main() {}
