tests/bad/01-enum-empty.stderr
error: #[derive(Default)] is not supported for empty enums
 --> tests/bad/01-enum-empty.rs:2:6
  |
2 | enum Empty{}
  |      ^^^^^
